Add location sharing feature and Event Acknowledgements

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
         <input type="text" id="message" name="message" placeholder="type your message" minlength="1">
         <button type="submit">Send</button>
     </form>
+    <button id="location-btn">Send Location</button>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/chat.js"></script>
 </body>
