--- a/public/index.html
+++ b/public/index.html
@@ -11,47 +11,18 @@
 </head>
 
 <body>
-    <div class="chat">
-        <div class="chat__sidebar">
-
-        </div>
-        <div class="chat__main">
-            <div id="message-container" class="chat__messages"></div>
-            <div class="compose">
-                <form id="form">
-                    <input type="text" id="message" name="message" placeholder="type your message" minlength="1">
-                    <button type="submit">Send</button>
-                </form>
-                <button id="location-btn">Send Location</button>
-            </div>
+    <div class="centered-form">
+        <div class="centered-form__box">
+            <h1>Join</h1>
+            <form method="GET" action="/chat.html">
+                <label for="username">Display Name</label>
+                <input type="text" id="username" name="username" placeholder="Display name" required>
+                <label for="room">Room</label>
+                <input type="text" id="room" name="room" placeholder="Room" required>
+                <button type="submit">Join Room</button>
+            </form>
         </div>
     </div>
-
-    <script id="message-template" type="text/html">
-          <div class="message">
-              <p>
-                  <span class="message__name">Professor</span>
-                  <span class="message__meta">{{createdAt}}</span>
-                </p>
-                <p>{{text}}</p>
-          </div>
-    </script>
-    <script id="location-template" type="text/html">
-       <div class="message">
-            <p>
-                <span class="message__name">Professor</span>
-                <span class="message__meta">{{createdAt}}</span>
-            </p>
-            <p><a href="{{url}}" target="_blank">Location</a></p>
-       </div>
-    </script>
-
-    <script crossorigin="anonymous"
-        src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="/js/chat.js"></script>
 </body>
 
 </html>
