--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
             <h1>Join</h1>
             <form method="GET" action="/chat.html">
                 <label for="username">Display Name</label>
-                <input type="text" id="username" name="username" placeholder="Display name" required>
+                <input type="text" id="username" name="username" placeholder="Display name" required autocomplete="off">
                 <label for="room">Room</label>
                 <input type="text" id="room" name="room" placeholder="Room" required>
                 <button type="submit">Join Room</button>
