--- a/public/chat.html
+++ b/public/chat.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="chat">
-        <div class="chat__sidebar">
+        <div id="sidebar" class="chat__sidebar">
 
         </div>
         <div class="chat__main">
@@ -45,6 +45,15 @@
             </p>
             <p><a href="{{url}}" target="_blank">Location</a></p>
        </div>
+    </script>
+    <script id="sidebar-template" type="text/html">
+        <h2 class="room-title">{{room}}</h2>
+        <h3 class="list-title">Users</h3>
+        <ul class="users">
+            {{#users}}
+                <li >{{username}}</li>
+            {{/users}}
+        </ul>
     </script>
 
     <script crossorigin="anonymous"
